# PoxiGames.github.io

./: CNAME  README.md  STYLE.css  index.html  player.html  poxi.html  scores.json  script.js  soon.html  style.css
.github/workflows/: main.yml
Json/: CMakeLists.txt  JsonFiller.hpp  JsonFiller_PG2  JsonFiller_PG2.cpp  JsonFiller_PG3.cpp
Json/Excel data/: PoxiGames2Season2.xlsx  PoxiGames2Season3.xlsx  PoxiGames2Season4.xlsx  PoxiGames2Season5.xlsx  PoxiGames3Season1.xlsx  PoxiGames3Season2.xlsx  PoxiGames3Season3.xlsx  PoxiGames3Season4.xlsx
Json/JsonBackups/: PG2S2.json  PG2S3.json  PG2S4.json  PG2S5.json  PG3S1.json  PG3S2.json  PG3S3.json  PG3S4.json
coming soon/: index.html
lava/: index.html
players/: data.json  index.html  players.json  scores.json  script.js
players/profile/: index.html  script.js
poxi/: index.html
poxi/minigames/: index.html
poxi/minigames/battle/: index.html
poxi/minigames/bridge/: index.html
poxi/minigames/donut/: index.html
poxi/minigames/extraction/: index.html
poxi/minigames/heist/: index.html
poxi/minigames/heist/upgrades/: index.html
poxi/minigames/hunt/: index.html
poxi/minigames/pirates/: index.html
poxi/minigames/race/: index.html
poxi/players/: data.json  index.html  script.js  teams.json
poxi/players/profile/: index.html  script.js
